# module-3.15

./: README.md  ROS.docx  package.xml  setup.cfg  setup.py
 .generator/: Generator.py
*.calibration/: calibrate.py
*.generator/: main.py
config/: params.yaml
detection/: defines.py  main.py  utils.py
fiducial_marker_pose/: CameraPublisher.py  Detector.py  MarkerEstimator.py  package.xml  setup.py
fiducial_marker_pose/.demo/: aruco_marker_generate.py  aruco_marker_generate.yaml  aruco_marker_test.py  aruco_marker_test.yaml
fiducial_marker_pose/.demo/test/: output_1.5_10.txt  output_1.5_15.txt  output_1.5_5.txt
fiducial_marker_pose/config/: fiducial_marker_pose.yaml
fiducial_marker_pose/fiducial_marker_pose/: detector.py  marker_estimator.py  marker_estimator_node.py
fiducial_marker_pose/launch/: fiducial_marker_pose.launch.py
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/py_pubsub/lib/py_pubsub/: detector
install/py_pubsub/share/py_pubsub/: package.sh
launch/: estimator_node_launch.py
msg/: CMakeLists.txt
pose_interfaces/: CMakeLists.txt  package.xml
pose_interfaces/msg/: Marker.msg  MarkerArray.msg
ros/: DetectionNode.py  PublisherNode.py
setup/: generate.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: DetectionNode.py  PublisherNode.py
