<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fiducial_marker_pose</name>
  <version>1.0.0</version>
  <description>Package for reading video stream and publishing information about detected AruCo markers</description>
  <author email="jekasjeny1012@gmail.com">Evgenii Smirnov</author>
  <maintainer email="voltage.machine@yandex.ru">Polytech Voltage Machine</maintainer>

  <license>Apache License</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>yaml</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
